# stefnceorf

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  README_ja.md  audio-descript-design.md  claude-code-prompt.md  llms.txt  pyproject.toml
docs/superpowers/plans/: 2026-07-23-auto-logic-workflow.md  2026-07-23-logic-fcpxml-spacing.md
docs/superpowers/specs/: 2026-07-23-auto-logic-workflow-design.md
stefnceorf/: __init__.py  cli.py  fcpxml.py  fillers.py  fillers_en.txt  fillers_ja.txt  render.py  transcribe.py
stefnceorf.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: conftest.py  test_acceptance.py  test_cli.py  test_fcpxml.py  test_fillers.py  test_render.py  test_transcribe.py
